- Fixed an issue with invalid users on AOC causing crashes.
- Xyphos items database now used by default for AO. Please report issues at http://www.xyphos.com/viewforum.php?f=7
- Changed order of the all link so 1st added is last on 1st, giving it priority
- Privgroup command Help no longer shows for AoC
- Fixed Several Bugs in the bid info blob

New Modules:
- Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status


-------------
Version 0.6.6
-------------
- Add detection of missing config file and try to detect if config file was not read properly.
- Added setting for what raid types to show in raid control start raid links
- Added a best match function to tools module
- Added waypoint support to rally
- Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use
- Fixed login in AoC after patch 1.05.6


-------------
Version 0.6.5
-------------
- Fixed date format for !whois -> last online (aoc only)
- Added missing version info in !about (not currently used for stable release versions)
- Backported some more fixes for various PHP notices when running with higher error reporting levels enabled.
- Fixed a bug causing the internal buddylist count to be off, which in turn meant roster updates would run every hour for busy bots.
- Fix the bug causing !list output for the AO loot module to not have clickable item references.
- Fix a bug #417476 causing IRC nickname changes to ignore AnnounceTo setting. Reported by Getrix.

API Changes:
- make_item again accepts the optional fifth argument for alternative quoting.


-------------
Version 0.6.4
-------------
- Modified the network protocol to work with AoC 1.05
  Please note that PrivGroup relays are no longer an option for AoC due to chatserver changes.
- Reversing stripping of control characters on text from IRC for now.
- htmlspecialchars_decode text going to IRC to decode &amp; and similar.