@@ -22,6 +22,7 @@ Version 0.6.7
 - Changed order of the all link so 1st added is last on 1st, giving it priority
 - Privgroup command Help no longer shows for AoC
 - Fixed Several Bugs in the bid info blob
+- Fixed some issues with adding alt with points, the merge process should work better now
 
 New Modules:
 - Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status
